--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </script>
 
     <script type="text/x-handlebars" id="index">
-      {{#each}}
+      {{#each nonArchivedProject}}
         <div class="large-4 medium-4 columns project-block">
           <h3>{{name}}</h3>
           <p>
@@ -52,6 +52,7 @@
     <script src="js/libs/jquery-1.10.2.js"></script>
     <script src="js/libs/handlebars-1.1.2.js"></script>
     <script src="js/libs/ember-1.3.1.js"></script>
+    <script src="js/libs/ember-data.js"></script>
     <script src="js/app.js"></script>
     <script src="js/fixtures.js"></script>
     <!-- to activate the test runner, add the "?test" query string parameter -->
